kubernetes/apps/media/sonarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: television-box
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames:
    - "sonarr.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: sonarr
          port: 8989
